--- a/BladeOfShawesome/Package/manifest.json
+++ b/BladeOfShawesome/Package/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
-  "name": "ChebsModStub",
+  "name": "BladeOfShawesome",
   "description": "to do",
   "version_number": "0.0.1",
-  "website_url": "https://github.com/jpw1991/chebs-mod-stub",
+  "website_url": "https://github.com/jpw1991/blade-of-shawesome",
   "dependencies": [
     "ValheimModding-Jotunn-2.11.2"
   ]
